--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
 <app-header></app-header>
+<nav id="menu" >
+    <ul id="menu">
+      <li><a href="#Aboutme" id="Aboutme">Sobre mi</a></li>
+      <li><a href="#Experiencia">Experiencia</a>
+        <ul>
+          <li><a href="#programacion">Programación</a></li>
+          <li><a href="#BO">Back Office</a></li>
+        </ul>  
+      </li>
+      <li><a href="#Contacto">Contacto</a></li>
+    </ul>
+  </nav>
 <app-aboutme></app-aboutme>
