--- a/src/app/components/aboutme/aboutme.component.css
+++ b/src/app/components/aboutme/aboutme.component.css
@@ -22,3 +22,18 @@ div{
 
 #jr {
     margin-left: 7px;}
+
+#BO{
+    margin-left: 50px;
+}
+#Programacion{
+    margin-left: 50px;
+}
+#final{
+text-align: right;
+}
+#form{
+    height: 500px;
+    width: 500px;
+    
+}
