--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -11,9 +11,66 @@
 
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
-            <h2>Acerca de mí</h2>
+            <section id="Aboutme">
+                <h2>Acerca de mí</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
-            <h2>holis</h2>
+            </section>
+
+            <section id="Experiencia">
+                <h2>Experiencia</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+            <section id="Programacion">
+                <h3>Programación</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta cum earum fugiat nesciunt dignissimos, porro amet facilis officiis ad harum nam repudiandae optio labore omnis tempore a illum, fuga nostrum?</p>
+            </section>
+            <section id="BO">
+                <h3>Back Office</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos repellat dolorum dolore harum quasi, consectetur, dignissimos assumenda laudantium facilis incidunt qui voluptates saepe velit eius vero, enim provident quidem magnam.</p>
+            </section>
+        </section>
+
+            <section id="Contacto">
+                <h2>Contacto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam libero magni accusantium earum sit vero, atque adipisci velit consequatur nisi nam id error quos nesciunt enim ducimus, odit aspernatur ipsa!</p>
+            <form id="form">
+                <label for="nombre" style="width:800px">Nombre:</label><br>
+                <input type="text" id="nombre" name="nombre"><br>
+                <label for="apellido">Apellido</label><br>
+                <input type="text" id="apellido" name="apellido"><br>
+                <label for="email">E-mail</label><br>
+                <input type="text" id="email" name="email"><br>
+                <label for="telefono">Teléfono</label><br>
+                <input type="text" id="telefono" name="telefono"><br>
+                <label for="servicio">¿Que servicio necesitas?</label><br>
+                      <select id="servicio" name="servicio">
+                      <option value="publicidad">Publicidad</option>
+                      <option value="identidad">Identidad</option>
+                      <option value="folleteria">Folletería</option>
+                      <option value="rrss">Redes Sociales</option>
+                      <option value="otro">Otro</option>
+                     </select>
+                  <br>
+      
+                <textarea name="detalle" style="width:800px; height:200px;">
+                      
+                </textarea>
+      
+                    <br>
+      
+                <input type="button" value="enviar"><br>
+      
+              </form>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168878932454!2d-58.38376444867994!3d-34.60373446491117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1661181969938!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+
+            <footer id="final">
+                <p>Valentina Hernandez &copy; 2022</p>
+            </footer>
         </span>
     </div>
 
