--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,1 @@
-<img src="../../../assets/Logos/LogoArgentinaPrograma.png" id="LogoArgentina">
+<img src="../../../assets/Logos/LogoUTN.png" id="LogoArgentina">
