--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -48,10 +48,9 @@
                 <input type="text" id="telefono" name="telefono"><br>
                 <label for="servicio">¿Que servicio necesitas?</label><br>
                       <select id="servicio" name="servicio">
-                      <option value="publicidad">Publicidad</option>
-                      <option value="identidad">Identidad</option>
-                      <option value="folleteria">Folletería</option>
-                      <option value="rrss">Redes Sociales</option>
+                      <option value="página web">Publicidad</option>
+                      <option value="contratación">contratacion</option>
+                      <option value="Diseño">Diseño</option>
                       <option value="otro">Otro</option>
                      </select>
                   <br>
